Fixed image alignment and post image excerpt display

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,3 +1,7 @@
+/* To center images */
+.center {
+    text-align: center;
+}
 /**
  * Site header
  */
